--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,7 @@
 
 body {
   margin: 0;
+  min-height: 100vh;
   position: relative;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -14,7 +15,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/*this prevents the footer to go over the main content*/
+body:after {
+  content: "";
+  display: block;
+  height: 60px; /* Set same as footer's height */
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.footer {
+  bottom: 0;
+  position: absolute;
 }
